# pranaOS

./: .bochsrc.cdrom  .bochsrc.disk  .clang-format  .clang-tidy  .gdbinit  .gitattributes  .gitignore  .gitmodules  .gn  AUTHOR  BUILD.gn  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bochsrc  build.gn  build.sh  check.yml  compile_flags.txt  gn_gen.sh  go.mod  go.sum  grub.cfg  magefile.go  makefile.config  pranaOS.files  requirements.txt  sys  tapdown.sh  tapup.sh
Builder/: .gitignore  CMakeLists.txt  PranaBuilder.prana
Builder/Examples/: hello.prana
Builder/Prana/: Config.cpp  Config.h  Context.cpp  Context.h  IncludeParser.h  TimeStampDumper.h  TimeStampParser.h
Builder/Prana.xcodeproj/: project.pbxproj
dvcs/: Cargo.toml
dvcs/src/: config.toml  main.rs  utils.rs
kernel/: .build.mk  .gitignore  AddressSanitizer.cpp  AddressSanitizer.h  Assertions.h  AtomicEdgeAction.h  BootInfo.h  CMOS.cpp  CMOS.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  ConsoleDevice.cpp  ConsoleDevice.h  CoreDump.cpp  CoreDump.h  Debug.h.in  DoubleBuffer.cpp  DoubleBuffer.h  Forward.h  FutexQueue.cpp  FutexQueue.h  GlobalProcessExposed.cpp  IO.h  KBuffer.h  KBufferBuilder.cpp  KBufferBuilder.h  KLexicalPath.cpp  KLexicalPath.h  KResult.h  KString.cpp  KString.h  KSyms.cpp  KSyms.h  Makefile  MiniStdLib.cpp  Module.h  Multiboot.h  Panic.cpp  Panic.h  (+135 more)
kernel/abi/: README.md  audio.h
kernel/acpi/: Definitions.h  DynamicParser.cpp  DynamicParser.h  Initialize.cpp  Initialize.h  MultiProcessorParser.cpp  MultiProcessorParser.h  Parser.cpp  Parser.h  definitions.h  dynamicparser.cpp  dynamicparser.h  initialize.cpp  initialize.h  multiprocessorparser.h  parser.h
kernel/api/: FB.h  InodeWatcherEvent.h  InodeWatcherFlags.h  KeyCode.h  MousePacket.h  Syscall.h  archctl_numbers.h  cdefs.h  device.h  deviceevent.h  errno.h  fb.h  fcntl.h  hid.h  inodewatcherevent.h  inodewatcherflags.h  ioctl.h  keycode.h  memorylayout.h  mmap.h  mousepacket.h  page.h  poll.h  shm.h  signal.h  stdarg.h  stddef.h  stdint.h  syscall.h  termios.h  time.h  timepage.h  types.h  unistd.h  utsname.h
kernel/arch/: README.md  arch.h  deferredcallentry.h  definedcallentry.h  processor.h  processorspecificdataid.h  registerstate.h  scopedcritical.h  smapdisabler.h  spinlock.h
kernel/archs/: .build.mk  Arch.h  Arch.x86_32.cpp  Arch.x86_64.cpp  Memory.h
kernel/asm/: int.s
kernel/audio/: audio.cpp  audio.h
kernel/boot/: loader.s
kernel/bus/: address.h  bus.h
kernel/core/: cpu.asm  cpu.cpp  cpu.h  fpu.h  gdtentry.h  memory.h
kernel/cpu/: cpu.asm  cpu.cpp  exception.h  exceptions.h  fpu.cpp  fpu.h  gdtentry.cpp  gdtentry.h  halt.c  halt.h  idt.cpp  idt.h  memory.h  physicalmemory.h  pic.h  port.h  poweroff.cpp  poweroff.h  reboot.cpp  reboot.h  register.h  rtc.c  rtc.h  tasksegment.cpp  tasksegment.h  vm.h
kernel/debug/: debug.h
kernel/device/: I8042controller.h  asyncdevicerequest.h  blockdevice.h  characterdevice.cpp  characterdevice.h  device.h  diskpartition.cpp  diskpartition.h  fulldevice.cpp  fulldevice.h  mbrpartitiontable.h  nulldevice.cpp  nulldevice.h  pcspeaker.h  vgadevice.h  zerodevice.cpp  zerodevice.h
kernel/devices/: AsyncDeviceRequest.cpp  AsyncDeviceRequest.h  BlockDevice.cpp  BlockDevice.h  CharacterDevice.cpp  CharacterDevice.h  Device.cpp  Device.h  FullDevice.cpp  FullDevice.h  KCOVDevice.cpp  KCOVDevice.h  KCOVInstance.cpp  KCOVInstance.h  MemoryDevice.cpp  MemoryDevice.h  NullDevice.cpp  NullDevice.h  PCISerialDevice.cpp  PCISerialDevice.h  PCSpeaker.cpp  PCSpeaker.h  RandomDevice.cpp  RandomDevice.h  SB16.cpp  SB16.h  SerialDevice.cpp  SerialDevice.h  VMWareBackdoor.cpp  VMWareBackdoor.h  ZeroDevice.cpp  ZeroDevice.h  ata.c  ata.h  termios.h
kernel/disks/: disk.h  diskcontroller.h  diskmanager.h  partition.h
kernel/drivers/: driver.cpp  driver.h  drivers.h  manager.cpp  manager.h  pcidriver.h
kernel/filesystem/: AnonymousFile.cpp  AnonymousFile.h  BlockBasedFileSystem.cpp  BlockBasedFileSystem.h  Custody.cpp  Custody.h  DevFS.cpp  DevFS.h  DevPtsFS.cpp  DevPtsFS.h  Ext2FileSystem.cpp  Ext2FileSystem.h  FIFO.cpp  FIFO.h  File.cpp  File.h  FileBackedFileSystem.cpp  FileBackedFileSystem.h  FileDescription.cpp  FileDescription.h  FileSystem.cpp  FileSystem.h  ISO9660FileSystem.cpp  ISO9660FileSystem.h  Inode.cpp  Inode.h  InodeFile.cpp  InodeFile.h  InodeIdentifier.h  InodeMetadata.h  InodeWatcher.cpp  InodeWatcher.h  Mount.cpp  Mount.h  Plan9FileSystem.cpp  Plan9FileSystem.h  ProcFS.cpp  ProcFS.h  SysFS.cpp  SysFS.h  (+38 more)
kernel/graphics/: Definitions.h  FramebufferDevice.cpp  FramebufferDevice.h  GraphicsDevice.h  GraphicsManagement.cpp  GraphicsManagement.h  VGACompatibleAdapter.cpp  VGACompatibleAdapter.h  definitions.h  genericgraphicsadapter.h
kernel/heap/: Heap.h  SlabAllocator.cpp  SlabAllocator.h  heap.h  kmalloc.cpp  kmalloc.h  slaballocator.h
kernel/include/: const.h  if_ether.h  math.c  queue.c  queue.h
kernel/input/: keyboard.cpp  keyboard.h  keyboardmanager.h
kernel/installer/: installer.h
kernel/internal/: apm.cpp  apm.h  bochs.h  dma.h  edid.h  graphics.h  pci.h  rtc.h  smbios.h  systemcomponent.h  video.h
kernel/interrupt/: apic.h  genericinterrupthandler.cpp  genericinterrupthandler.h  idt.cpp  idt.h  interruptmanagement.h  ioapic.cpp  ioapic.h  irq.h  irqcontroller.h  irqhandler.cpp  irqhandler.h  isr.h  msihandler.h  pic.cpp  pic.h  sharedirqhandler.cpp  sharedirqhandler.h  spuriousinterrupthandler.cpp  spuriousinterrupthandler.h  unhandledinterrupthandler.cpp  unhandledinterrupthandler.h
kernel/interrupts/: APIC.cpp  APIC.h  GenericInterruptHandler.cpp  GenericInterruptHandler.h  IOAPIC.cpp  IOAPIC.h  IRQController.h  IRQHandler.cpp  IRQHandler.h  InterruptManagement.cpp  InterruptManagement.h  MSIHandler.h  PIC.cpp  PIC.h  SharedIRQHandler.cpp  SharedIRQHandler.h  SpuriousInterruptHandler.cpp  SpuriousInterruptHandler.h  UnhandledInterruptHandler.cpp  UnhandledInterruptHandler.h
kernel/ipc/: ipc.h  signal.h
kernel/isyscall/: syscall.go  syscall_amd64.go
(+7622 files in other folders)
