# /*
#  * Copyright (c) 2021, Krisna Pranav
#  *
#  * SPDX-License-Identifier: BSD-2-Clause
# */

buildconfig = "//build/config/BUILDCONFIG.gn"

default_args = {
  is_debug = true
  compile_tests = true
  optimize = true
  objc_support = false
  bench_method = "none"
  host = "gnu"
  device_type = "desktop"
}
