[package]
name = "dvcs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
blake3 = "1.5"
flate2 = "1.0"
zstd = "0.12"
sled = "0.34"
log = "0.4"
tracing = "0.1"
anyhow = "1.0"