[package]
name = "dvcs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
blake3 = "1.3"
zstd = "0.9"
brotli = "3.3"
async-std = "1.10"
tokio = { version = "1", features = ["full"] }
proptest = "1.0"
tracing = "0.1"
log = "0.4"
anyhow = "1.0.98"
flate2 = "1.1.1"
serde_json = "1.0.140"

[dev-dependencies]
criterion = "0.3"