import("//build/libs/TEMPLATE.gni")

pranaOS_static_library("libabi") {
  sources = [
    "filesystem.h",
    "handle.h",
    "iocall.h",
    "keyboard.h",
    "launchpad.h",
    "memory.h",
    "mouse.h",
    "network.h",
    "paths.h",
    "result.h",
    "rune.h",
    "syscalls.h",
    "system.h",
    "task.h",
    "time.h",
  ]

  deplibs = [
    "libcxx",
    "libfoundation",
    "libg",
    "libipc",
  ]
  configs = [ "//build/libs:libcxx_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
