import("//build/libs/TEMPLATE.gni")

pranaOS_static_library("libabi") {
  sources = [
      "system.h"
      "process.h",
      "time.h",
      "filesystem.h",
      "task.h",
      "network.h",
  ]

  deplibs = [
    "libcxx",
    "libfoundation",
    "libipc",
  ]

  configs = [ "//build/libs:libcxx_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
