import("//build/libs/TEMPLATE.gni")

pranaOS_static_library("libc") {
  sources = [
    "limits.h",
    "bits/stdint.h",
    "__libc__.h",
    "ctype/ctype.c",
    "dirent/dirent.c",
    "init/_lib.c",
    "malloc/malloc.c",
    "malloc/slab.c",
    "pwd/pwd.c",
    "posix/fs.cpp",
    "posix/identity.cpp",
    "posix/sched.cpp",
    "posix/signal.cpp",
    "posix/system.cpp",
    "posix/tasking.cpp",
    "posix/time.cpp",
    "pthread/pthread.c",
    "pranaos/numberformatter.h",
    "pranaos/plugs.h",
    "pranaos/printf.h",
    "pranaos/time.h",
    "setjmp/$target_cpu/setjmp.s",
    "socket/socket.c",
    "stdio/printf.c",
    "stdio/scanf.c",
    "stdio/stdio.c",
    "stdlib/exit.c",
    "stdlib/pts.c",
    "stdlib/tools.c",
    "string/string.c",
    "sysdeps/pranaos/generic/shared_buffer.c",
    "sysdeps/unix/$target_cpu/crt0.s",
    "sysdeps/unix/generic/ioctl.c",
    "termios/termios.c",
    "time/strftime.cpp",
    "time/time.c",

    # private
    "init/_init.c",
  ]

  if (target_cpu == "aarch32") {
    sources += [ "string/routines/aarch32/memset.S" ]
  }

  include_dirs = [
    "include/",
    "//libs/",
  ]

  configs = [ "//build/libs:lib_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
