import("//build/libs/TEMPLATE.gni")

pranaOS_static_library("libcxx") {
  sources = [
    # shared (with LibC)
    "../libc/ctype/ctype.c",
    "../libc/dirent/dirent.c",
    "../libc/init/_lib.c",
    "../libc/malloc/malloc.c",
    "../libc/malloc/slab.c",
    "../libc/posix/fs.cpp",
    "../libc/posix/sched.cpp",
    "../libc/posix/signal.cpp",
    "../libc/posix/system.cpp",
    "../libc/posix/tasking.cpp",
    "../libc/posix/time.cpp",
    "../libc/pthread/pthread.c",
    "../libc/pwd/pwd.c",
    "../libc/setjmp/$target_cpu/setjmp.s",
    "../libc/socket/socket.c",
    "../libc/stdio/printf.c",
    "../libc/stdio/scanf.c",
    "../libc/stdio/stdio.c",
    "../libc/stdlib/exit.c",
    "../libc/stdlib/pts.c",
    "../libc/stdlib/tools.c",
    "../libc/string/string.c",
    "../libc/sysdeps/pranaos/generic/shared_buffer.c",
    "../libc/sysdeps/unix/$target_cpu/crt0.s",
    "../libc/sysdeps/unix/generic/ioctl.c",
    "../libc/termios/termios.c",
    "../libc/time/strftime.c",
    "../libc/time/time.c",

    #private
    "init/_init.cpp",
    "init/_lib.cpp",
    "src/iostream.cpp",
  ]

  if (target_cpu == "aarch32") {
    sources += [ "../libc/string/routines/aarch32/memset.S" ]
  }

  include_dirs = [
    "include/",
    "//libs/libc/include/",
    "//libs/libcxxabi/include/",
    "//libs/",
  ]

  deplibs = [ "libcxxabi" ]

  configs = [ "//build/libs:libcxx_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
