import("//build/libs/TEMPLATE.gni")

pranaOS_static_library("libio") {
  sources = [
      "handle.h",
      "reader.h",
      "seek.h",
      "write.h",
      "writer.h",
      "scanner.h",
  ]

  deplibs = [
    "libcxx",
    "libfoundation",
    "libipc",
  ]

  configs = [ "//build/libs:libcxx_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
