import("//build/libs/TEMPLATE.gni")

pranaOS_static_library("libio") {
  sources = [
      "handle.h",
      "numberscanner.h",
      "memorywriter.h",
      "reader.h",
      "scanner.h",
      "sink.h",
      "path.h",
      "seek.h",
      "write.h",
      "writer.h",
      "memoryreader.h",
  ]

  deplibs = [
    "libcxx",
    "libfoundation",
    "libipc",
  ]

  configs = [ "//build/libs:libcxx_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
