import("//build/libs/TEMPLATE.gni")

pranaOS_static_library("libnet") {
  sources = [
  ]

  if (target_cpu == "aarch32") {
    sources += [ "string/routines/aarch32/memset.S" ]
  }

  include_dirs = [
    "include/",
  ]

  configs = [ "//build/libs:lib_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
