import("//build/libs/TEMPLATE.gni")

pranaOS_static_library("libobjc") {
  sources = [
    "src/NSObject.m",
    "src/class.m",
    "src/init.m",
    "src/memory.m",
    "src/msgsend_$target_cpu.S",
    "src/selector.m",
  ]

  include_dirs = [
    "include/",
    "//libs/libc/include/",
    "//libs/",
  ]

  deplibs = [ "libc" ]

  configs = [ "//build/libs:libobjcc_flags" ]

  # Currently, using Clang+LTO and aarch32 as a traget, a weird issue
  # happens, when linker can't resolve objc_load_function.
  # Such functions contain `und` instruction and leads to a crash.
  if (host == "llvm" && target_cpu != "aarch32") {
    cflags = [ "-flto" ]
  }
}
