import("//build/libs/TEMPLATE.gni")

pranaOS_static_library("libutils") {
  sources = [
      "allof.h",
      "anyof.h",
      "assertions.h",
      "atomic.h",
      "badge.h",
      "bytebuffer.h",
      "checked.h",
      "noncopyable.h",
      "refcounted.h",
      "find.h",
      "try.h",
      "traits.h",
      "span.h",
      "typedtransfer.h",
      "hashfunctions.h",
      "iterator.h",
      "kmalloc.h",
      "concepts.h",      
      "numericlimits.h",
      "forward.h",
      "types.h",
      "platform.h",
      "iterationdecision.h",
      "stdextras.h",
  ]

  deplibs = [
    "libcxx",
    "libfoundation",
    "libipc",
  ]

  configs = [ "//build/libs:libcxx_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
