import("//build/libs/TEMPLATE.gni")

pranaOS_static_library("libutils") {
  sources = [
      "array.h",
      "allof.h",
      "anyof.h",
      "assertions.h",
      "atomic.h",
      "binarysearch.h",
      "bitcast.h",
      "badge.h",
      "bytebuffer.h",
      "bytereader.h",
      "checked.h",
      "noncopyable.h",
      "neverdestroyed.h",
      "genericlexer.h",
      "refcounted.h",
      "find.h",
      "result.h",
      "try.h",
      "traits.h",
      "typelist.h",
      "span.h",
      "typedtransfer.h",
      "hashfunctions.h",
      "iterator.h",
      "kmalloc.h",
      "simd.h",
      "concepts.h",      
      "numericlimits.h",
      "forward.h",
      "types.h",
      "optional.h",
      "platform.h",
      "iterationdecision.h",
      "stdextras.h",
  ]

  deplibs = [
    "libcxx",
    "libfoundation",
    "libipc",
  ]

  configs = [ "//build/libs:libcxx_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
